suite customer api